javafx, login, getuser, medical record, refactoring