@@ -1,1 +1,14 @@
 ﻿# Clinical-System
+
+## Libraries/Technologies used
+* [JavaFX version 21.0.3](https://gluonhq.com/products/javafx/)
+* IntelliJ IDEA
+
+### Setup JavaFX
+Read [Getting Started with JavaFX](https://openjfx.io/openjfx-docs/#introduction)
+
+1. Download JavaFX SDK suited for your device
+2. Extract the .zip file to a suitable location on your device
+3. Add your\path\to\javafx-sdk-21.0.3\lib to your environment variables
+4. Add the same path to "libraries used" in the project ((file > project structure > libraries) IntelliJ IDEA)
+5. Add vmware commands --module-path "your\path\to\javafx-sdk-21.0.3\lib" --add-modules javafx.controls,javafx.fxml ((Run > Edit Configurations) IntelliJ IDEA)
